CELIX-50: Fixed small error in the driver attributes.

git-svn-id: https://svn.apache.org/repos/asf/incubator/celix/trunk@1469206 13f79535-47bb-0310-9956-ffa450edef68